Correct word-wrap value on _tables.scss and _tables.styl

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -11,6 +11,6 @@ table > thead {
 table th,
 table td {
   padding: .25rem;
-  word-wrap: none;
+  word-wrap: normal;
   line-height: 1;
 }
